AC_INIT(blog_applet.py)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-blog, 0.8.5)

AM_MAINTAINER_MODE

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2
AC_PROG_INTLTOOL([0.21])

dnl check for python
dnl AM_PATH_PYTHON(2.2)
AM_PATH_PYTHON

PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

ALL_LINGUAS="az bg ca cs de en_CA en_GB es et fr hr hu it ja ms nb nl no pl pt pt_BR rw sq sr sr@Latn sv uk zh_CN"

GETTEXT_PACKAGE=gnome-blog
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])

AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome_blog_globals.py
gnome-blog.spec
protocols/Makefile
po/Makefile.in
])
