AC_INIT(blog_applet.py)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-blog, 0.9.2)

AM_MAINTAINER_MODE

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

dnl check for python
dnl AM_PATH_PYTHON(2.2)
AM_PATH_PYTHON

PKG_CHECK_MODULES(PYGTK, pygtk-2.0 >= 2.6)
AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

GETTEXT_PACKAGE="gnome-blog"
IT_PROG_INTLTOOL([0.35.0])
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])

AM_GLIB_GNU_GETTEXT

dnl  -------------------
dnl | freedesktop stuff |
dnl  -------------------

AC_PATH_PROGS(DESKTOP_FILE_VALIDATE,[desktop-file-validate],[no])
if test "${DESKTOP_FILE_VALIDATE}" = "no"; then
        AC_MSG_ERROR([desktop-file-validate not found, please install desktop-file-utils from
                      http://www.freedesktop.org/software/desktop-file-utils/releases/])
fi

dnl  --------
dnl | output |
dnl  --------

AC_OUTPUT([
Makefile
gnome_blog_globals.py
gnome-blog.spec
protocols/Makefile
po/Makefile.in
gnome-blog.desktop.in
])
